<resources>
    <string name="app_name">TestWS</string>
    <string name="logo_ic">Logo</string>
    <string name="text_onboardin_z">ПРИВЕТ</string>
    <string name="text_onboardin_p">Наслаждайся отборочными. Будь внимателен. Делай хорошо.</string>
    <string name="btn_alert">Войти в аккаунт</string>
    <string name="onboard_foot">Еще нет аккаунта? Зарегистрируйтесь</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_log">LogActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Авторизация</string>
    <string name="second_fragment_label">Регистрация</string>
    <string name="next">Registr</string>
    <string name="previous">Войти</string>
    <string name="text_reg">Тут будет регистрация</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>