<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybgcolor"
    tools:context=".Onboarding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="209dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="231dp"
            android:layout_height="293dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="90dp"
            android:contentDescription="@string/logo_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="140dp"
            android:fontFamily="@font/alegreya_bold"
            android:includeFontPadding="true"
            android:text="@string/text_onboardin_z"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="282dp"
            android:layout_height="90dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="65dp"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/text_onboardin_p"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button"
            android:layout_width="321dp"
            android:layout_height="61dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/button_onboard"
            android:textSize="20sp"
            app:backgroundTint="@color/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:rippleColor="@color/button"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/alegreya_bold"
            android:text="@string/onboard_foot"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>